--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 ###> symfony/framework-bundle ###
-/.env
 /public/bundles/
 /var/
 /vendor/
 /temp/
 temp/
+.env.local
 ###< symfony/framework-bundle ###
 
 ###> romaricp ###
