--- a/.env
+++ b/.env
@@ -25,7 +25,11 @@ APP_SECRET=964426c54e3af8663a65d483c67e1778
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=UTF-8"
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_user@127.0.0.1:3306/db_name?serverVersion=5.7
+
+# ligne de base
+ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+
+# DATABASE_URL=mysql://sf4:sf4@mysql:3306/sf4?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
